--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jswf/react",
-  "version": "0.2.6",
+  "version": "0.2.10",
   "description": "Virtual Window for React",
   "main": "dist/index.js",
   "scripts": {
@@ -14,10 +14,10 @@
   "keywords": [
     "jswf",
     "react",
-    "virtual window",
-    "List View",
-    "Tree View",
-    "Split View"
+    "VirtualWindow",
+    "ListView",
+    "TreeView",
+    "SplitView"
   ],
   "author": "SoraKumo",
   "license": "MIT",
