--- a/package.json
+++ b/package.json
@@ -22,15 +22,15 @@
   "author": "SoraKumo",
   "license": "MIT",
   "dependencies": {
-    "react": "~16.11.0",
+    "@jswf/manager": "^1.0.0-rev2",
+    "react": "~16.12.0",
     "resize-observer-polyfill": "~1.5.1",
     "styled-components": "~4.4.1"
   },
   "devDependencies": {
-    "typescript": "~3.6.4",
-    "@types/react": "~16.9.11",
-    "@types/react-dom": "~16.9.3",
-    "@types/styled-components": "~4.1.20"
+    "@types/react-dom": "~16.9.4",
+    "@types/styled-components": "~4.4.0",
+    "typescript": "~3.7.2"
   },
   "repository": {
     "type": "git",
