--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "author": "SoraKumo",
   "license": "MIT",
   "dependencies": {
-    "@jswf/manager": "^1.0.0-rev2",
+    "@jswf/manager": "^1.0.2",
     "react": "~16.12.0",
     "resize-observer-polyfill": "~1.5.1",
     "styled-components": "~4.4.1"
