--- a/.github/workflows/vtest-push.yml
+++ b/.github/workflows/vtest-push.yml
@@ -45,3 +45,15 @@ jobs:
           git add .
           git commit -m $BRANCH
           git push -f origin captures/$BRANCH
+      - name: publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        with:
+          path: test/package.json
+        if: contains(github.ref, 'refs/tags')
+        run: |
+          a=($(echo $GITHUB_REF | sed -n -r 's/^refs\/tags\/([^-]*)-(.*)$/\1 \2/p')) tag=${a[0]} version=${a[1]}
+          echo publish $version [$tag]
+          cd test
+          npm config set //registry.npmjs.org/:_authToken=$NODE_AUTH_TOKEN
+          npm publish --tag $tag
