--- a/.github/workflows/vtest-pull-request.yml
+++ b/.github/workflows/vtest-pull-request.yml
@@ -2,7 +2,7 @@ name: VisualTest(pull request)
 on:
   pull_request:
 jobs:
-  Test:
+  VisualTest:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -17,7 +17,7 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         run: yarn -cwd test
       - name: Screnn capture
-        run: yarn -cwd capture
+        run: yarn -cwd test capture
       - name: Regression test
         run: |
           mkdir __reg__
