--- a/.github/workflows/vtest-pull-request.yml
+++ b/.github/workflows/vtest-pull-request.yml
@@ -15,9 +15,9 @@ jobs:
           restore-keys: ${{ runner.OS }}-build-${{ env.cache-name }}-
       - name: Install Dependencies
         if: steps.cache.outputs.cache-hit != 'true'
-        run: yarn -cwd test
+        run: yarn --cwd test
       - name: Screnn capture
-        run: yarn -cwd test capture
+        run: yarn --cwd test capture
       - name: Regression test
         run: |
           mkdir __reg__
