--- a/.github/workflows/vtest-pull-request.yml
+++ b/.github/workflows/vtest-pull-request.yml
@@ -31,7 +31,7 @@ jobs:
         run: |
           num=`echo ${{ github.ref }} | awk -F'/' '{print $3}'`
           git clone https://github.com/${GITHUB_REPOSITORY} -b gh-pages __gh-pages__ || mkdir __gh-pages__
-          node .github/scripts/comment.js
+          NODE_PATH=test/node_modules node .github/scripts/comment.js
           mkdir __gh-pages__/$num || true
           mv __reg__ __gh-pages__/$num/$GITHUB_RUN_ID
           set $(awk -F/ '{print $1, $2}' <<< $GITHUB_REPOSITORY)
