--- a/.github/workflows/vtest-pull-request.yml
+++ b/.github/workflows/vtest-pull-request.yml
@@ -26,7 +26,7 @@ jobs:
           key: ${{ runner.OS }}-build-test-${{ hashFiles('test/yarn.lock') }}
           restore-keys: ${{ runner.OS }}-build-${{ env.cache-name }}-
       - name: Install Dependencies
-        if: steps.cache.outputs.cache-hit != 'true'
+        if: steps.test-cache.outputs.cache-hit != 'true'
         run: yarn --cwd test
       - name: Screnn capture
         run: yarn --cwd test capture
