--- a/main/package.json
+++ b/main/package.json
@@ -22,15 +22,16 @@
   "license": "MIT",
   "dependencies": {
     "@jswf/manager": "^1.0.3",
-    "react": "~16.13.1",
+    "react": "~16.14.0",
     "resize-observer-polyfill": "~1.5.1",
     "styled-components": "~5.2.0"
   },
   "devDependencies": {
     "@types/styled-components": "~5.1.4",
-    "ts-loader": "^8.0.4",
+    "ts-loader": "^8.0.5",
     "typescript": "~4.0.3",
-    "webpack": "^5.0.0",
+    "url-loader": "^4.1.1",
+    "webpack": "<5.0.0",
     "webpack-cli": "^4.0.0"
   },
   "repository": {
