--- a/package.json
+++ b/package.json
@@ -8,5 +8,13 @@
   },
   "repository": "https://github.com/JavaScript-WindowFramework/jswf-react",
   "author": "SoraKumo <info@croud.jp>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@typescript-eslint/parser": "^4.8.0",
+    "eslint": "^7.13.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "prettier": "^2.1.2",
+    "prettier-eslint": "^11.0.0",
+    "typescript": "^4.0.5"
+  }
 }
