--- a/main/package.json
+++ b/main/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jswf/react",
-  "version": "1.0.33",
+  "version": "1.0.34",
   "description": "Virtual Window for React",
   "main": "dist/index.js",
   "scripts": {
@@ -28,9 +28,12 @@
   },
   "devDependencies": {
     "@types/styled-components": "~5.1.4",
+    "svgo": "^1.3.2",
+    "svgo-loader": "^2.2.1",
     "ts-loader": "^8.0.11",
     "typescript": "~4.1.2",
-    "webpack": "~5.6.0",
+    "typescript-plugin-styled-components": "^1.4.4",
+    "webpack": "~5.10.0",
     "webpack-cli": "~4.2.0"
   },
   "repository": {
